# HW1-FAST-AQ-Parser

./: README.md  example.py  pyproject.toml
.ipynb_checkpoints/: HW1_test-checkpoint.ipynb
seqparser/: parse.py  seq.py
tests/: test_parsers.py  test_transcribe.py
